# ScottMeyers

./: Readme.md  Readme.txt
CRTP.Chapter6/: CMakeLists.txt  main.cpp  main.hpp
Chapter1/: chapter1.cpp
Chapter2/chapter2/: CMakeLists.txt  main.cpp  virtual_forbidden.cpp
Chapter5/: MyPersonImpl.cpp  MyPersonImpl.h  main.cpp
Chapter6/: CMakeLists.txt  main.cpp  main.hpp
Chapter7/: main.cpp
DeclarationsAndImplLanguage.Chapter5/: CMakeLists.txt  MyPerson.cpp  MyPerson.h  main.cpp
DestructorsDiamondsAndCopies.Chapter2/: CMakeLists.txt  virtual_destroy.cpp  virtual_forbidden.cpp
TemplatesAndGenericProgramming.Chapter7/: CMakeLists.txt  main.cpp  main.hpp
castOperator.Chapter03/: CMakeLists.txt  main.cpp
const.Chapter1/: CMakeLists.txt  chapter1.h
